--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "redux-toolkit": "^1.1.2",
     "sass": "^1.62.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
