--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.62.0",
     "typescript": "^4.9.5",
